--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -25,3 +25,21 @@ app.artifactId=${project.artifactId}
 app.version=${project.version}
 app.finalName=${project.build.finalName}
 
+### H2 Database config :
+db.driver=org.h2.Driver
+# in-memory mode :
+#db.url=jdbc:h2:mem:tempdb;DB_CLOSE_DELAY=-1
+# file persist mode (~ is the user home directory) :
+db.url=jdbc:h2:~/databases/memorygamedb
+db.user=
+db.password=
+db.createTables=true
+db.startH2Console=true
+db.h2ConsolePort=2020
+
+### MySQL Database config :
+#db.driver=com.mysql.cj.jdbc.Driver
+#db.url=jdbc:mysql://localhost/memorygamedb
+#db.user=root
+#db.password=root
+#db.createTables=true
