--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -30,12 +30,12 @@ db.driver=org.h2.Driver
 # in-memory mode :
 #db.url=jdbc:h2:mem:tempdb;DB_CLOSE_DELAY=-1
 # file persist mode (~ is the user home directory) :
-db.url=jdbc:h2:~/databases/memorygamedb
+db.url=jdbc:h2:~/.databases/memorygamedb
 db.user=
 db.password=
 db.createTables=true
-db.startH2Console=true
-db.h2ConsolePort=2020
+#db.startH2Console=true
+#db.h2ConsolePort=2020
 
 ### MySQL Database config :
 #db.driver=com.mysql.cj.jdbc.Driver
