--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -31,7 +31,8 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%c.
 
 # Redirect log messages to a log file, support file rolling.
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=./log/${project.build.finalName}.log
+#log4j.appender.file.File=./log/${project.build.finalName}.log
+log4j.appender.file.File=${user.home}/.log/${project.build.finalName}.log
 log4j.appender.file.MaxFileSize=5MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
