--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -21,7 +21,7 @@
 # THE SOFTWARE.
 
 # Root logger level and output options : {DEBUG, INFO, WARN, ERROR, FATAL}, stdout, file
-log4j.rootLogger=DEBUG, stdout, file
+log4j.rootLogger=DEBUG, stdout
 
 # Redirect log messages to console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
