--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,12 @@
             <artifactId>h2</artifactId>
             <version>1.4.194</version>
         </dependency>
-        <!-- MySQL Database : -->
+        <!-- MySQL Database :
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>6.0.6</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <!-- to add executable jar file with manifest file : -->
@@ -56,7 +56,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>net.isetjb.Application</mainClass>
+                            <mainClass>net.isetjb.MemoryGame</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
